--- a/.github/workflows/update-file.yml
+++ b/.github/workflows/update-file.yml
@@ -14,6 +14,18 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v3
 
+      - name: Debug Environment Variables
+        env:
+          MY_SECRET: ${{ secrets.MY_SECRET }}
+          MY_SECRET2: ${{ secrets.MY_SECRET2 }}
+          MY_SECRET3: ${{ secrets.MY_SECRET3 }}
+        run: |
+          echo "MY_SECRET: $MY_SECRET"
+          echo "MY_SECRET2: $MY_SECRET2"
+          echo "MY_SECRET3: $MY_SECRET3"
+          echo "File content before replacement:"
+          cat test.txt
+
       - name: Replace Placeholders Dynamically
         env:
           MY_SECRET: ${{ secrets.MY_SECRET }}
@@ -23,6 +35,9 @@ jobs:
           for VAR in $(compgen -v | grep MY_SECRET); do
             PLACEHOLDER="{{${VAR}}}"
             VALUE=${!VAR}
+            echo "Replacing $PLACEHOLDER with $VALUE"
             sed -i "s|$PLACEHOLDER|$VALUE|g" test.txt
           done
+          echo "File content after replacement:"
+          cat test.txt
         shell: bash
