--- a/.github/workflows/update_without_intermid_file.yml
+++ b/.github/workflows/update_without_intermid_file.yml
@@ -3,9 +3,8 @@ name: Replace Placeholders with Secrets
 on:
   push:
     paths:
-      - test.txt # Trigger only if test.txt is modified
-
-  workflow_dispatch: # Allows manual trigger for testing
+      - test.txt # Trigger only when test.txt is modified
+  workflow_dispatch: # Allows manual triggering
 
 jobs:
   update-file:
@@ -15,16 +14,17 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v3
 
-      - name: Initialize Target File
+      - name: Initialize Target File from Repository
         run: |
-          if [ -f "/home/temp_test/test.txt" ]; then
-            echo "/home/temp_test/test.txt exists"
-            ls -l /home/temp_test/test.txt
-          else
-            echo "/home/temp_test/test.txt does not exist. Creating it."
+          echo "Checking out the repository file 'test.txt'..."
+          if [ -f "test.txt" ]; then
+            echo "Found test.txt in the repository. Copying it to /home/temp_test/test.txt."
             mkdir -p /home/temp_test
             cp test.txt /home/temp_test/test.txt
             chmod 666 /home/temp_test/test.txt
+          else
+            echo "test.txt not found in the repository. Exiting."
+            exit 1
           fi
 
       - name: Replace Placeholders Dynamically
